# breakingitdown

./: .gitignore  README.md  bid.py  pyproject.toml
.github/workflows/: tests.yml
bid/: adapter.py  cli.py  harness.py  model.py  observer.py  permissions.py  search.py  session.py  todo.py  tools.py  vc.py
prompts/: manager.md  worker.md
tests/: test_crash_recovery.py  test_direct_audit.py  test_harness.py  test_permissions.py  test_session.py  test_todo.py  test_vc.py
workspace/.bid/: log.md
workspace/docs/: project-status.md  task.md
