[project]
name = "breakitdown"
version = "0.1.0"
description = "Local-first agent harness for long-horizon tasks on small edge language models"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
test = ["pytest"]

[tool.pytest.ini_options]
testpaths = ["tests"]
