[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "breakitdown"
version = "0.1.0"
description = "Local-first processor harness for long-horizon tasks on small edge language models"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
test = ["pytest>=7"]

[project.scripts]
bid = "bid.cli:main"

[tool.setuptools]
packages = ["bid"]

[tool.pytest.ini_options]
testpaths = ["tests"]
